// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItems
      amount={100}
      createdAt={0}
      description="shawarma"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItems
      amount={70}
      createdAt={-345600000}
      description="burger"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItems
      amount={120}
      createdAt={345600000}
      description="pizza"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`render ExpenseList with with empty expenses message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
       
      <span>
        No Expenses
      </span>
       
    </div>
  </div>
</div>
`;
